small refactor to creation product flow and improve openapi.yaml file
